--- a/ColyberCopter/.vscode/settings.json
+++ b/ColyberCopter/.vscode/settings.json
@@ -1,17 +1,33 @@
 {
     "files.associations": {
-        "functional": "cpp",
+        "array": "cpp",
+        "atomic": "cpp",
+        "bit": "cpp",
+        "*.tcc": "cpp",
+        "cmath": "cpp",
+        "string": "cpp",
+        "unordered_map": "cpp",
+        "exception": "cpp",
+        "algorithm": "cpp",
         "memory": "cpp",
-        "tuple": "cpp",
+        "memory_resource": "cpp",
+        "optional": "cpp",
+        "random": "cpp",
+        "string_view": "cpp",
         "type_traits": "cpp",
         "utility": "cpp",
-        "xmemory": "cpp",
-        "xtr1common": "cpp",
-        "xutility": "cpp",
-        "list": "cpp",
-        "*.tcc": "cpp",
+        "functional": "cpp",
+        "fstream": "cpp",
+        "iosfwd": "cpp",
         "istream": "cpp",
+        "limits": "cpp",
+        "new": "cpp",
+        "numeric": "cpp",
         "ostream": "cpp",
+        "sstream": "cpp",
+        "streambuf": "cpp",
+        "system_error": "cpp",
+        "tuple": "cpp",
         "typeinfo": "cpp"
     }
 }
