Static code analysys is working

--- a/ColyberCopter/platformio.ini
+++ b/ColyberCopter/platformio.ini
@@ -25,9 +25,11 @@ lib_deps =
 [env:bluepill_f103c8_128k]
 platform = ststm32
 board = bluepill_f103c8_128k
-check_tool = pvs-studio
 extra_scripts =
     pre:change_c_cpp_version.py  ; https://community.platformio.org/t/separate-settings-for-c-and-c-versions/21647
 build_unflags =
     -std=gnu++14
+check_tool = cppcheck, clangtidy
+check_skip_packages = yes
+
 
