--- a/platformio.ini
+++ b/platformio.ini
@@ -26,6 +26,7 @@ lib_deps =
 [env:bluepill_f103c8_128k]
 platform = ststm32
 board = bluepill_f103c8_128k
+monitor_speed = 115200
 extra_scripts =
     pre:change_c_cpp_version.py  ; https://community.platformio.org/t/separate-settings-for-c-and-c-versions/21647
 build_unflags =
