Added hardwareConfig.h file and hardware configuration feature

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,6 +10,8 @@
 
 [env]
 framework = arduino
+build_flags =
+    -include include/hardwareConfig.h
 lib_deps =
     https://github.com/JanWielgus/Tasker.git
     https://github.com/JanWielgus/ByteTypes.git
