Increased hardware serial buffer size to 256 (issue #96)

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,8 @@
 framework = arduino
 build_flags =
     -include include/hardwareConfig.h
+    -D SERIAL_TX_BUFFER_SIZE=256
+    -D SERIAL_RX_BUFFER_SIZE=256
 lib_deps =
     https://github.com/JanWielgus/Tasker.git
     https://github.com/JanWielgus/ByteTypes.git
