Made code compilable in 2025
Remember to remove Fusion/Examples and Fusion/Python folders before building

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,12 +9,13 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env]
-framework = arduino
 build_flags =
     -include include/hardwareConfig.h
     -D SERIAL_TX_BUFFER_SIZE=256
     -D SERIAL_RX_BUFFER_SIZE=256
 lib_deps =
+    SPI
+    Wire
     https://github.com/JanWielgus/Tasker.git
     https://github.com/JanWielgus/PID.git
     https://github.com/JanWielgus/PacketCommunication.git
@@ -23,20 +24,16 @@ lib_deps =
     https://github.com/JanWielgus/SimpleMS5611.git
     https://github.com/JanWielgus/SimpleMPU6050.git
     https://github.com/ColyberCompany/FilteringLibraries.git
-    https://github.com/xioTechnologies/Fusion.git#v1.0.5
+    https://github.com/xioTechnologies/Fusion.git#v1.0.5  ; Delete Fusion/Examples and Fusion/Python folders!
     https://github.com/ColyberCompany/MPU6500-SPI.git
     https://github.com/mikalhart/TinyGPSPlus.git
 
 
 [env:bluepill_f103c8_128k]
-platform = ststm32
+platform = ststm32@18.0.0  ; tested for this version. Can be updated
+framework = arduino
 board = bluepill_f103c8_128k
 monitor_speed = 115200
-extra_scripts =
-    pre:change_c_cpp_version.py  ; https://community.platformio.org/t/separate-settings-for-c-and-c-versions/21647
-build_unflags =
-    -std=gnu++14
+; C++17 is by default. Can check it with `pio run --verbose`
 check_tool = cppcheck, clangtidy
 check_skip_packages = yes
-
-
